# json-sop

./: .gitignore  .travis.yml  README.md  cabal.project  json-sop.cabal
.github/workflows/: haskell-ci.yml
src/Generics/SOP/: JSON.hs
src/Generics/SOP/JSON/: Model.hs
src/Generics/SOP/Util/: PartialResult.hs
test/: Test_JSON_SOP.hs
