name:                json-sop
version:             0.1.0.0
license-file:        LICENSE
author:              Edsko de Vries, Andres Löh
maintainer:          edsko@well-typed.com
category:            Generics
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.2


library
  exposed-modules:     Generics.SOP.JSON
                       Generics.SOP.JSON.Model
  other-modules:       Generics.SOP.Util.PartialResult
  build-depends:       base                 >= 4.6  && < 5,
                       generics-sop         >= 0.1  && < 0.2,
                       lens-sop             >= 0.1  && < 0.2,
                       tagged               >= 0.7  && < 0.8,
                       aeson                >= 0.7  && < 0.8,
                       vector               >= 0.10 && < 0.11,
                       text                 >= 1.1  && < 1.2,
                       unordered-containers >= 0.2  && < 0.3,
                       time                 >= 1.4  && < 1.5,
                       transformers         >= 0.3  && < 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  ScopedTypeVariables
                       TypeFamilies
                       RankNTypes
                       TypeOperators
                       GADTs
                       ConstraintKinds
                       MultiParamTypeClasses
                       TypeSynonymInstances
                       FlexibleInstances
                       FlexibleContexts
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       DefaultSignatures
                       KindSignatures
                       DataKinds
                       FunctionalDependencies
                       AutoDeriveTypeable
  other-extensions:    OverloadedStrings
                       OverlappingInstances
                       PolyKinds
                       UndecidableInstances
                       TemplateHaskell
                       CPP
